- added $PreserveFQDN config file directive
  Enables to use FQDNs in sender names where the legacy default
  would have stripped the domain part.
  Thanks to BlinkMind, Inc. http://www.blinkmind.com for sponsoring this
  development.
- bugfix: imudp went into an endless loop under some circumstances
  (but could also leave it under some other circumstances...)
  Thanks to David Lang and speedfox for reporting this issue.
---------------------------------------------------------------------------
Version 4.1.2  [DEVEL] (rgerhards), 2008-12-04
- bugfix: code did not compile without zlib
- security bugfix: $AllowedSender was not honored, all senders were
  permitted instead (see http://www.rsyslog.com/Article322.phtml)
- security fix: imudp emitted a message when a non-permitted sender
  tried to send a message to it. This behaviour is operator-configurable.
  If enabled, a message was emitted each time. That way an attacker could
  effectively fill the disk via this facility. The message is now
  emitted only once in a minute (this currently is a hard-coded limit,
  if someone comes up with a good reason to make it configurable, we
  will probably do that).
- doc bugfix: typo in v3 compatibility document directive syntax
  thanks to Andrej for reporting
- imported other changes from 3.21.8 and 3.20.1 (see there)
---------------------------------------------------------------------------
Version 4.1.1  [DEVEL] (rgerhards), 2008-11-26
- added $PrivDropToGroup, $PrivDropToUser, $PrivDropToGroupID,
  $PrivDropToUserID config directives to enable dropping privileges.
  This is an effort to provide a security enhancement. For the limits of this
  approach, see http://wiki.rsyslog.com/index.php/Security
- re-enabled imklog to compile on FreeBSD (brought in from beta)
---------------------------------------------------------------------------
Version 4.1.0  [DEVEL] (rgerhards), 2008-11-18

********************************* WARNING *********************************